# rustcoding

./: .gitignore  Cargo.toml  README.md  _Cargo.toml  main.py  node_modules  pyproject.toml
.pi/: do_citation.md
coding_problems/LinkedList/add_two_numbers/: Cargo.toml
coding_problems/LinkedList/delete_duplicates/: Cargo.toml
coding_problems/LinkedList/delete_nodes_linked_list/: Cargo.toml
coding_problems/LinkedList/merge_two_lists/: Cargo.toml
coding_problems/LinkedList/merge_two_lists_v2/: Cargo.toml
coding_problems/LinkedList/remove_linked_list_elements/: Cargo.toml
coding_problems/LinkedList/remove_nodes_from_linked_list/: Cargo.toml
coding_problems/chatbot/: Cargo.toml  MANUAL.md  README.md  info.md
coding_problems/chatbot/src/: client.rs  conf.json  config.rs  main.rs  models.rs  tools.rs  ui.rs
coding_problems/container_with_most_water/src/: main.rs
coding_problems/delete_duplicates/: Cargo.toml
coding_problems/delete_duplicates/src/: main.rs
coding_problems/delete_nodes_linked_list/: Cargo.toml
coding_problems/delete_nodes_linked_list/src/: main.rs
coding_problems/has_cycle/: Cargo.toml  has_cycle.py  test_has_cycle.py
coding_problems/has_cycle/src/: main.rs
coding_problems/invert_tree/: Cargo.toml
coding_problems/is_palindrome/src/: main.rs
coding_problems/is_subsequence/: Cargo.toml  job.yaml
coding_problems/is_subsequence/src/: main.rs
coding_problems/kth_smallest_prime_fraction/: Cargo.toml
coding_problems/kth_smallest_prime_fraction/src/: main.rs
coding_problems/max_distinct_elements/: Cargo.toml
coding_problems/max_distinct_elements/src/: main.rs
coding_problems/merge_two_lists_v2/: Cargo.toml
coding_problems/next_greater_element_1/: Cargo.toml
coding_problems/next_greater_element_1/src/: main.rs
coding_problems/remove_linked_list_elements/: Cargo.toml
coding_problems/remove_linked_list_elements/src/: main.rs
coding_problems/remove_nodes_from_linked_list/: Cargo.toml
coding_problems/remove_nodes_from_linked_list/src/: main.rs
coding_problems/rust_coding_lib/: Cargo.toml
coding_problems/third_max_number/: Cargo.toml
coding_problems/top_k_frequent/: Cargo.toml
coding_problems/valid_palindrome2/: Cargo.toml  Valid Palindrome II.md  code_review.md
coding_problems/word_break/: Cargo.toml
coding_problems/zigzag_level_order/: Cargo.toml  solution.ipynb  solution_r0.ipynb
hello_actix/src/: main.rs
invert_tree/src/: main.rs
is_subsequence/: Cargo.toml  Dockerfile
is_subsequence/src/: lib.rs
jupyter/: my_prelude_nb.ipynb  my_utils_nb.ipynb  sample.ipynb  some_data.csv  tax_return_review.ipynb
jupyter/nb_prelude/: Cargo.toml
merge_two_lists/: Cargo.toml
merge_two_lists/src/: main.rs
outputs/feature_decision_dataset/: feature_decision_dataset.xlsx
rust_book/: .latexmkrc  main.aux  main.fdb_latexmk  main.fls  main.out  main.tex  main.toc  main.xdv
rust_book/src/: cargo_tutorial.md  cargo_tutorial.tex
rust_coding_lib/src/: lib.rs  listnode_lib.rs  treenode_lib.rs
rust_exercise/rig_hello/: Cargo.toml
rust_exercise/tokio_hello/: Cargo.toml
same_tree/: Cargo.toml
same_tree/src/: main.rs
scripts/: build_feature_decision_dataset.mjs
skill_exercise/: skill_how_to.md
top_k_frequent/src/: main.rs
zigzag_level_order/: Cargo.toml
zigzag_level_order/src/: lib.rs
zigzag_level_order/zigzag_level_order_001/: Cargo.toml  solution.ipynb  solution_r0.ipynb
(+24 files in other folders)
