[workspace]
resolver = "3"
members = [
"coding_problems/chatbot",
"coding_problems/container_with_most_water",
"coding_problems/delete_duplicates",
"coding_problems/LinkedList/delete_nodes_linked_list",
"coding_problems/hello",
"coding_problems/hello_actix",
"coding_problems/invert_tree",
"coding_problems/is_palindrome",
"coding_problems/is_subsequence",
"coding_problems/merge_two_lists", "coding_problems/merge_two_lists_v2",
"coding_problems/next_greater_element_1",
"coding_problems/remove_linked_list_elements",
"coding_problems/remove_nodes_from_linked_list",
"coding_problems/rust_coding_lib",
"coding_problems/same_tree",
"coding_problems/top_k_frequent",
"coding_problems/two_sum",
"coding_problems/valid_parentheses",
"coding_problems/zigzag_level_order",
"coding_problems/third_max_number",
"coding_problems/max_distinct_elements",
"jupyter/my_utils",
"jupyter/nb_prelude", 
"coding_problems/LinkedList/add_two_numbers"]
