[package]
name = "chatbot"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
console = "0.16"
futures-util = "0.3"
indicatif = "0.18"
bytes = "1.10.1"

[workspace]
resolver = "3"
